prevent image from stretching on mobile

--- a/client/src/app/components/take-photo/take-photo.component.scss
+++ b/client/src/app/components/take-photo/take-photo.component.scss
@@ -44,7 +44,7 @@ p {
 }
 
 video, canvas {
-  width: 100%;
+  max-width: 100%;
   max-height: 40vh;
   border-radius: 8px;
   margin-bottom: 1rem;
